# SFBC

./: .gitignore  .gitmodules  LICENSE  README.md  dataCompressor.ipynb  dataLayout.md  env.md  index.html  index.md  pyproject.toml  requirements  upload.sh
datasets/: generate_test_case_I.py
eval/: Benchmark.csv  computationalPerformance.ipynb  gradcheck.py  gradientCheck.ipynb  performanceMeasurement.py  performanceStream.py
eval/noise/: constants.py  generator.py  perlin.py  simplex1d.py  simplex2d.py  simplex3d.py  simplex4d.py  util.py
eval/training/: networkVisualizer(test_case_II).ipynb  stream.py  testCaseIV.py  test_case_I.ipynb  test_case_II.ipynb  test_case_IV_generation.ipynb
eval/training/ablationStudies/: ablationStudy.csv  ablationStudyBseFunctions.csv  ablationStudyFourier.csv  ablationStudyFourier_Gradients_Layout.csv  ablationStudyFourier_Gradients_n6.csv  ablationStudyFourier_Gradients_nVar.csv  layoutAblation 32 32 1.csv  layoutAblation 32 32 32 1.csv  layoutAblation 32 32 32 32 1.csv  layoutAblation v4 32 32 1.csv  layoutAblation v4 32 32 32 1.csv
notebooks/: datasetVisualizer.ipynb
scripts/test_case_II/: train.py
src/BasisConvolution/: convLayerv2.py  convLayerv3.py  convNetv2.py  convNetv3.py
src/BasisConvolution/detail/: DataLoader.py  activation.py  augment.py  basis.py  cutlass.py  cutlassv2.py  initialization.py  mapping.py  mlp.py  radius.py  scatter.py  typing.py  util.py  windows.py
src/BasisConvolution/neighborhoodFallback/: naive.py  neighborhood.py  util.py
src/BasisConvolution/sph/: kernels.py  neighborhood.py  (+1 more)
(+46 files in other folders)
